src/components/AboutCarrier/AboutCarrier.scss
@use "../../styles/vars";
@import "../../styles/extensions";

.AboutCarrier {
  background-color: vars.$color-bg-alt;
  width: 100%;
  min-height: 100vh;
  z-index: -2;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.AboutCarrier__container {
  width: 80%;
  min-height: 50vh;
  height: 70%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;

  margin: 0 auto;
  overflow: visible;

  & .AboutCarrier__content {
    font-size: vars.$fontSize-main;

    width: clamp(200px, 40%, 100%);
    align-self: stretch;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding: vars.$padding-big;
    & p {
      padding-bottom: vars.$padding;
    }
  }
  & .AboutCarrier__picture {
    width: clamp(600px, 40%, 100%);
    flex-grow: 1;
    position: relative;
    z-index: 1;
    &::after {
      @extend %frame;
    }
    & img {
      height: 100%;
      width: 100%;
      object-fit: contain;
    }
  }
}

.sectionTitle {
  position: relative;
  height: 15vh;
  color: vars.$color-text-important;
  padding: vars.$padding-small;
  font-size: vars.$fontSize-title;
  width: fit-content;
  &::after {
    @extend %underTitle;
  }
}

.pushUp {
  position: relative;
  min-height: 15vh;
  min-width: 100%;
}

